--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,32 @@ matrix:
     dist: xenial
     sudo: required
     group: edge
+  - name: "Linux with gcc on PowerPC 64-bit"
+    env:
+    - CONFIGURE_OPTIONS=""
+    - CFLAGS="--coverage"
+    - LDFLAGS="--coverage"
+    - TARGET="linux-gcc"
+    compiler: gcc
+    os: linux-ppc64le
+    dist: xenial
+    sudo: required
+    group: edge
+  - name: "Linux with gcc on s390x (Docker)"
+    env:
+    - DOCKERHUB_REPO="s390x/ubuntu"
+    - DOCKERHUB_TAG="bionic"
+    - CONFIGURE_OPTIONS=""
+    - CFLAGS="--coverage"
+    - LDFLAGS="--coverage"
+    - TARGET="docker"
+    compiler: gcc
+    os: linux
+    dist: xenial
+    sudo: required
+    group: edge
+    services:
+    - docker
   - name: "Linux with gcc and wide character type (wchar_t) support"
     env:
     - CONFIGURE_OPTIONS="--enable-wide-character-type"
@@ -123,43 +149,12 @@ matrix:
     os: osx
     osx_image: xcode8.3
 before_install:
-  - if test ${TRAVIS_OS_NAME} = "linux"; then
-      sudo apt-get update && sudo apt-get --fix-missing -o Dpkg::Options::="--force-confold" upgrade -y --allow-unauthenticated && sudo apt-get install -y autopoint;
-    elif test ${TRAVIS_OS_NAME} = "osx"; then
-      brew update && brew install gettext gnu-sed && brew link --force gettext;
-    fi
-  - if test ${TARGET} = "coverity"; then
-      echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-;
-    fi
+- .travis/before_install.sh
 install:
-  - if test ${TRAVIS_OS_NAME} = "osx"; then
-      export SED="/usr/local/bin/gsed";
-    fi
-  - ./synclibs.sh --use-head && ./autogen.sh
-  - if test ${TARGET} = "linux-gcc-shared" || test ${TARGET} = "linux-gcc-shared-wide-character-type"; then
-      ./configure > /dev/null && make > /dev/null && ./syncsharedlibs.sh --use-head;
-    fi
-  - if test -x "synctestdata.sh"; then
-      ./synctestdata.sh;
-    fi
+- .travis/install.sh
 script:
-  - if test ${TRAVIS_OS_NAME} = "linux"; then
-      export PATH=$(echo $PATH | tr ":" "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s/::/:/g");
-    fi
-  - if test ${TARGET} != "coverity"; then
-      ./configure ${CONFIGURE_OPTIONS} && make > /dev/null && make check CHECK_WITH_STDERR=1;
-      if test $? -ne 0 && test -f tests/test-suite.log; then
-        cat tests/test-suite.log;
-      fi;
-      if test ${TARGET} = "macos-gcc-pkgbuild"; then
-        VERSION=`sed '5!d; s/^ \[//;s/\],$//' configure.ac` &&
-        make install DESTDIR=${PWD}/osx-pkg &&
-        mkdir -p ${PWD}/osx-pkg/usr/share/doc/libfsrefs &&
-        cp AUTHORS COPYING NEWS README ${PWD}/osx-pkg/usr/share/doc/libfsrefs &&
-        pkgbuild --root osx-pkg --identifier com.github.libyal.libfsrefs --version ${VERSION} --ownership recommended ../libfsrefs-${VERSION}.pkg;
-      fi
-    fi
+- .travis/script.sh
 after_success:
-  - if test ${TARGET} = "linux-gcc-no-optimization"; then
-      curl -o codecov.sh -s https://codecov.io/bash && sed 's/ -execdir / -exec /' -i ./codecov.sh && /bin/bash ./codecov.sh -n ${TARGET} -y .codecov.yml;
-    fi
+- if test ${TARGET} = "linux-gcc-no-optimization"; then
+    curl -o codecov.sh -s https://codecov.io/bash && sed 's/ -execdir / -exec /' -i ./codecov.sh && /bin/bash ./codecov.sh -n ${TARGET} -y .codecov.yml;
+  fi
