--- a/include/libfsrefs.h.in
+++ b/include/libfsrefs.h.in
@@ -267,7 +267,7 @@ int libfsrefs_volume_close(
 LIBFSREFS_EXTERN \
 int libfsrefs_volume_get_utf8_name_size(
      libfsrefs_volume_t *volume,
-     size_t *utf8_name_size,
+     size_t *utf8_string_size,
      libfsrefs_error_t **error );
 
 /* Retrieves the UTF-8 encoded name value
@@ -277,8 +277,8 @@ int libfsrefs_volume_get_utf8_name_size(
 LIBFSREFS_EXTERN \
 int libfsrefs_volume_get_utf8_name(
      libfsrefs_volume_t *volume,
-     uint8_t *utf8_name,
-     size_t utf8_name_size,
+     uint8_t *utf8_string,
+     size_t utf8_string_size,
      libfsrefs_error_t **error );
 
 /* Retrieves the size of the UTF-16 encoded name
@@ -288,7 +288,7 @@ int libfsrefs_volume_get_utf8_name(
 LIBFSREFS_EXTERN \
 int libfsrefs_volume_get_utf16_name_size(
      libfsrefs_volume_t *volume,
-     size_t *utf16_name_size,
+     size_t *utf16_string_size,
      libfsrefs_error_t **error );
 
 /* Retrieves the UTF-16 encoded name value
@@ -298,8 +298,8 @@ int libfsrefs_volume_get_utf16_name_size(
 LIBFSREFS_EXTERN \
 int libfsrefs_volume_get_utf16_name(
      libfsrefs_volume_t *volume,
-     uint16_t *utf16_name,
-     size_t utf16_name_size,
+     uint16_t *utf16_string,
+     size_t utf16_string_size,
      libfsrefs_error_t **error );
 
 #if defined( __cplusplus )
